9.1 fix calendar, upload img, autosize and content overflow

--- a/src/style/blocks/avatar.scss
+++ b/src/style/blocks/avatar.scss
@@ -6,4 +6,9 @@
   background-color: $item-bg-color;
   font-size: 0;
   overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
