--- a/src/style/blocks/main-page.scss
+++ b/src/style/blocks/main-page.scss
@@ -15,6 +15,7 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 1.25;
+  word-break: break-word;
 }
 
 .main-page__theme-list {
