--- a/src/style/blocks/new-publication.scss
+++ b/src/style/blocks/new-publication.scss
@@ -63,7 +63,7 @@
   }
 
   input {
-    width: 80px;
+    width: 100px;
     border: none;
     font-weight: bold;
     font-size: 13px;
